setup basic flow, fails due to \'Routing congestion too high\'

--- a/openlane/user_proj_example/config.json
+++ b/openlane/user_proj_example/config.json
@@ -3,7 +3,8 @@
     "DESIGN_IS_CORE": 0,
     "VERILOG_FILES": [
         "dir::../../verilog/rtl/defines.v",
-        "dir::../../verilog/rtl/user_proj_example.v"
+        "dir::../../verilog/rtl/user_proj_example.v",
+        "dir::../../verilog/rtl/__masc__execute.v"
     ],
     "CLOCK_PERIOD": 25,
     "CLOCK_PORT": "wb_clk_i",
