added Spike-side cosim script, updated openlane config to expand PL_TARGET_DENSITY to reduce overcongestion of PNR

--- a/AI_generated/tests/Makefile
+++ b/AI_generated/tests/Makefile
@@ -9,4 +9,4 @@ $(TOP): $(TOP).S
 	riscv64-unknown-elf-gcc $(OPTIONS) $(LDFLAGS) $< -o $@
 
 clean:
-	rm -rf $(PROGRAMS) *.out
+	rm -rf $(TOP) *.out *.cosim
